src/test/deca/syntax/parser/invalid/instance_of_boolean.deca
// Parser test, instanceof should be followed by an IDENT not a boolean

{
    x instanceof true;
}